--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
-  "name": "my-v0-project",
+  "name": "profilytics",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
+    "dev:frontend": "next dev",
+    "dev:backend": "nodemon backend/server.ts",
     "build": "next build",
+    "build:all": "next build && npm run build:backend",
+    "build:backend": "tsc -p backend/tsconfig.json",
     "start": "next start",
-    "lint": "next lint"
+    "start:backend": "node backend/dist/server.js",
+    "lint": "next lint",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev",
+    "db:studio": "prisma studio"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@prisma/client": "^5.18.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -37,34 +47,73 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@sendgrid/mail": "^8.1.3",
     "autoprefixer": "^10.4.20",
+    "aws-sdk": "^2.1691.0",
+    "axios": "^1.7.2",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "date-fns": "4.1.0",
+    "compression": "^1.7.4",
+    "concurrently": "^8.2.2",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "date-fns": "3.6.0",
+    "dotenv": "^16.4.5",
     "embla-carousel-react": "8.5.1",
+    "express": "^4.19.2",
+    "express-rate-limit": "^8.0.1",
+    "express-validator": "^7.1.0",
+    "helmet": "^7.1.0",
     "input-otp": "1.4.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.454.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
+    "nodemailer": "^6.9.14",
+    "openai": "^4.52.7",
+    "prisma": "^5.18.0",
+    "rate-limiter-flexible": "^5.0.3",
     "react": "^19",
-    "react-day-picker": "8.10.1",
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
+    "sharp": "^0.33.4",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
+    "winston": "^3.13.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/compression": "^1.7.5",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.11",
     "@types/node": "^22",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/supertest": "^6.0.2",
+    "cypress": "^13.13.1",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.4",
     "postcss": "^8",
+    "supertest": "^7.0.0",
     "tailwindcss": "^3.4.17",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
