--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,34 @@
+# dependencies
+node_modules/
+
+# next
+.next/
+.vercel/
+
+# backend build output
+backend/dist/
+
+# logs and coverage
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+coverage/
+
+# env
+.env
+.env.*
+
+# OS/editor
+.DS_Store
+Thumbs.db
+.vscode/
+.idea/
+
+# misc
+uploads/
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
