--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -47,7 +47,9 @@
     "**/*.spec.ts"
   ],
   "ts-node": {
-    "esm": true,
-    "experimentalSpecifierResolution": "node"
+    "esm": false,
+    "compilerOptions": {
+      "module": "commonjs"
+    }
   }
 } 
